--- a/pyproject.toml
+++ b/pyproject.toml
@@ -14,11 +14,17 @@ fastapi = "^0.110.3"
 pydantic = "^2.7.1"
 pydantic-settings = "^2.2.1"
 python-dotenv = "^1.0.1"
+python-jose = {extras = ["cryptography"], version = "^3.3.0"}
+passlib = {extras = ["bcrypt"], version = "^1.7.4"}
+python-multipart = "^0.0.9"
+uvicorn = "^0.29.0"
+bcrypt = "4.0.1"
 
 
 [tool.poetry.group.dev.dependencies]
 httpx = "^0.27.0"
 pytest = "^8.2.0"
+isort = "^5.13.2"
 
 [build-system]
 requires = ["poetry-core"]
