--- a/pyproject.toml
+++ b/pyproject.toml
@@ -25,6 +25,7 @@ bcrypt = "4.0.1"
 httpx = "^0.27.0"
 pytest = "^8.2.0"
 isort = "^5.13.2"
+trio = "^0.25.0"
 
 [build-system]
 requires = ["poetry-core"]
